crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-arrow-partitioned_clickbench_q26.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q26"
---
+-------------------------------------------------------+
| SearchPhrase                                          |
+-------------------------------------------------------+
|  завод тандалищные прода                              |
|  заочное сад цены нарощения музыка визу               |
|  светы женске 2 сезон                                 |
| !(салоны оста роботода                                |
| !куги для мясорубкина зимняя из виолет                |
| !смотреть опа гумми                                   |
| $_get am2 купейн в хорошем                            |
| $_get lucky marave                                    |
| $_get you fucking yong sc5355 черны на гард           |
| $_get_series of familton n5100-2007 «о бель в андроид |
+-------------------------------------------------------+
