crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-arrow-partitioned_clickbench_q30.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q30"
---
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
| sum(hits.ResolutionWidth) | sum(hits.ResolutionWidth + Int64(1)) | sum(hits.ResolutionWidth + Int64(2)) | sum(hits.ResolutionWidth + Int64(3)) | sum(hits.ResolutionWidth + Int64(4)) | sum(hits.ResolutionWidth + Int64(5)) | sum(hits.ResolutionWidth + Int64(6)) | sum(hits.ResolutionWidth + Int64(7)) | sum(hits.ResolutionWidth + Int64(8)) | sum(hits.ResolutionWidth + Int64(9)) | sum(hits.ResolutionWidth + Int64(10)) | sum(hits.ResolutionWidth + Int64(11)) | sum(hits.ResolutionWidth + Int64(12)) | sum(hits.ResolutionWidth + Int64(13)) | sum(hits.ResolutionWidth + Int64(14)) | sum(hits.ResolutionWidth + Int64(15)) | sum(hits.ResolutionWidth + Int64(16)) | sum(hits.ResolutionWidth + Int64(17)) | sum(hits.ResolutionWidth + Int64(18)) | sum(hits.ResolutionWidth + Int64(19)) | sum(hits.ResolutionWidth + Int64(20)) | sum(hits.ResolutionWidth + Int64(21)) | sum(hits.ResolutionWidth + Int64(22)) | sum(hits.ResolutionWidth + Int64(23)) | sum(hits.ResolutionWidth + Int64(24)) | sum(hits.ResolutionWidth + Int64(25)) | sum(hits.ResolutionWidth + Int64(26)) | sum(hits.ResolutionWidth + Int64(27)) | sum(hits.ResolutionWidth + Int64(28)) | sum(hits.ResolutionWidth + Int64(29)) | sum(hits.ResolutionWidth + Int64(30)) | sum(hits.ResolutionWidth + Int64(31)) | sum(hits.ResolutionWidth + Int64(32)) | sum(hits.ResolutionWidth + Int64(33)) | sum(hits.ResolutionWidth + Int64(34)) | sum(hits.ResolutionWidth + Int64(35)) | sum(hits.ResolutionWidth + Int64(36)) | sum(hits.ResolutionWidth + Int64(37)) | sum(hits.ResolutionWidth + Int64(38)) | sum(hits.ResolutionWidth + Int64(39)) | sum(hits.ResolutionWidth + Int64(40)) | sum(hits.ResolutionWidth + Int64(41)) | sum(hits.ResolutionWidth + Int64(42)) | sum(hits.ResolutionWidth + Int64(43)) | sum(hits.ResolutionWidth + Int64(44)) | sum(hits.ResolutionWidth + Int64(45)) | sum(hits.ResolutionWidth + Int64(46)) | sum(hits.ResolutionWidth + Int64(47)) | sum(hits.ResolutionWidth + Int64(48)) | sum(hits.ResolutionWidth + Int64(49)) | sum(hits.ResolutionWidth + Int64(50)) | sum(hits.ResolutionWidth + Int64(51)) | sum(hits.ResolutionWidth + Int64(52)) | sum(hits.ResolutionWidth + Int64(53)) | sum(hits.ResolutionWidth + Int64(54)) | sum(hits.ResolutionWidth + Int64(55)) | sum(hits.ResolutionWidth + Int64(56)) | sum(hits.ResolutionWidth + Int64(57)) | sum(hits.ResolutionWidth + Int64(58)) | sum(hits.ResolutionWidth + Int64(59)) | sum(hits.ResolutionWidth + Int64(60)) | sum(hits.ResolutionWidth + Int64(61)) | sum(hits.ResolutionWidth + Int64(62)) | sum(hits.ResolutionWidth + Int64(63)) | sum(hits.ResolutionWidth + Int64(64)) | sum(hits.ResolutionWidth + Int64(65)) | sum(hits.ResolutionWidth + Int64(66)) | sum(hits.ResolutionWidth + Int64(67)) | sum(hits.ResolutionWidth + Int64(68)) | sum(hits.ResolutionWidth + Int64(69)) | sum(hits.ResolutionWidth + Int64(70)) | sum(hits.ResolutionWidth + Int64(71)) | sum(hits.ResolutionWidth + Int64(72)) | sum(hits.ResolutionWidth + Int64(73)) | sum(hits.ResolutionWidth + Int64(74)) | sum(hits.ResolutionWidth + Int64(75)) | sum(hits.ResolutionWidth + Int64(76)) | sum(hits.ResolutionWidth + Int64(77)) | sum(hits.ResolutionWidth + Int64(78)) | sum(hits.ResolutionWidth + Int64(79)) | sum(hits.ResolutionWidth + Int64(80)) | sum(hits.ResolutionWidth + Int64(81)) | sum(hits.ResolutionWidth + Int64(82)) | sum(hits.ResolutionWidth + Int64(83)) | sum(hits.ResolutionWidth + Int64(84)) | sum(hits.ResolutionWidth + Int64(85)) | sum(hits.ResolutionWidth + Int64(86)) | sum(hits.ResolutionWidth + Int64(87)) | sum(hits.ResolutionWidth + Int64(88)) | sum(hits.ResolutionWidth + Int64(89)) |
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
| 76095721556               | 76145721556                          | 76195721556                          | 76245721556                          | 76295721556                          | 76345721556                          | 76395721556                          | 76445721556                          | 76495721556                          | 76545721556                          | 76595721556                           | 76645721556                           | 76695721556                           | 76745721556                           | 76795721556                           | 76845721556                           | 76895721556                           | 76945721556                           | 76995721556                           | 77045721556                           | 77095721556                           | 77145721556                           | 77195721556                           | 77245721556                           | 77295721556                           | 77345721556                           | 77395721556                           | 77445721556                           | 77495721556                           | 77545721556                           | 77595721556                           | 77645721556                           | 77695721556                           | 77745721556                           | 77795721556                           | 77845721556                           | 77895721556                           | 77945721556                           | 77995721556                           | 78045721556                           | 78095721556                           | 78145721556                           | 78195721556                           | 78245721556                           | 78295721556                           | 78345721556                           | 78395721556                           | 78445721556                           | 78495721556                           | 78545721556                           | 78595721556                           | 78645721556                           | 78695721556                           | 78745721556                           | 78795721556                           | 78845721556                           | 78895721556                           | 78945721556                           | 78995721556                           | 79045721556                           | 79095721556                           | 79145721556                           | 79195721556                           | 79245721556                           | 79295721556                           | 79345721556                           | 79395721556                           | 79445721556                           | 79495721556                           | 79545721556                           | 79595721556                           | 79645721556                           | 79695721556                           | 79745721556                           | 79795721556                           | 79845721556                           | 79895721556                           | 79945721556                           | 79995721556                           | 80045721556                           | 80095721556                           | 80145721556                           | 80195721556                           | 80245721556                           | 80295721556                           | 80345721556                           | 80395721556                           | 80445721556                           | 80495721556                           | 80545721556                           |
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
