crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-arrow-partitioned_clickbench_q6.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q6"
---
+-----------------------------------+
| count(DISTINCT hits.SearchPhrase) |
+-----------------------------------+
| 3412149                           |
+-----------------------------------+
