crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-arrow-partitioned_tpcds_q28.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q28"
---
+-------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+-------------------+--------+---------+
| B1_LP             | B1_CNT | B1_CNTD | B2_LP            | B2_CNT | B2_CNTD | B3_LP            | B3_CNT | B3_CNTD | B4_LP            | B4_CNT | B4_CNTD | B5_LP            | B5_CNT | B5_CNTD | B6_LP             | B6_CNT | B6_CNTD |
+-------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+-------------------+--------+---------+
| 56.47549529806655 | 36049  | 7003    | 90.9242456766139 | 31399  | 8235    | 61.5740652635909 | 29174  | 6522    | 69.6922585635359 | 36200  | 8320    | 89.2869629330685 | 32212  | 7930    | 106.9747970376581 | 28626  | 9058    |
+-------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+------------------+--------+---------+-------------------+--------+---------+
