crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-arrow-partitioned_tpcds_q33.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q33"
---
+---------------+-------------+
| i_manufact_id | total_sales |
+---------------+-------------+
| 993           | 30.05       |
| 699           | 52.65       |
| 823           | 92.05       |
| 783           | 129.04      |
| 733           | 574.31      |
| 748           | 636.01      |
| 931           | 1296.76     |
| 848           | 1377.50     |
| 853           | 1597.89     |
| 920           | 1605.43     |
+---------------+-------------+
