crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-arrow-partitioned_tpcds_q57.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q57"
---
+---------------+--------+-------+-------------------+-----------+---------+---------+
| cc_name       | d_year | d_moy | avg_monthly_sales | sum_sales | psum    | nsum    |
+---------------+--------+-------+-------------------+-----------+---------+---------+
| North Midwest | 2000   | 2     | 7201.093333       | 2787.29   | 3877.25 | 4135.16 |
| Mid Atlantic  | 2000   | 3     | 7565.594166       | 3181.66   | 3343.32 | 4565.20 |
| NY Metro      | 2000   | 4     | 7052.317500       | 2758.84   | 5323.46 | 3397.55 |
| Mid Atlantic  | 2000   | 2     | 7565.594166       | 3343.32   | 4935.00 | 3181.66 |
| Mid Atlantic  | 2000   | 2     | 6345.205000       | 2210.46   | 3973.84 | 3221.55 |
| Mid Atlantic  | 2000   | 2     | 7209.571666       | 3085.07   | 3565.30 | 4091.47 |
| North Midwest | 2000   | 4     | 7201.093333       | 3133.86   | 4135.16 | 4593.34 |
| Mid Atlantic  | 2000   | 6     | 7565.594166       | 3524.34   | 5698.93 | 3734.51 |
| North Midwest | 2000   | 4     | 6500.189166       | 2467.19   | 2614.22 | 4090.61 |
| NY Metro      | 2000   | 5     | 7209.978333       | 3179.64   | 4922.03 | 3375.16 |
+---------------+--------+-------+-------------------+-----------+---------+---------+
