crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-arrow-partitioned_tpcds_q63.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q63"
---
+--------------+-----------+--------------------+
| i_manager_id | sum_sales | avg_monthly_sales  |
+--------------+-----------+--------------------+
| 1            | 556.53    | 1677.6241666666665 |
| 1            | 722.00    | 1677.6241666666665 |
| 1            | 927.70    | 1677.6241666666665 |
| 1            | 1142.84   | 1677.6241666666665 |
| 1            | 1222.86   | 1677.6241666666665 |
| 1            | 1233.46   | 1677.6241666666665 |
| 1            | 2000.07   | 1677.6241666666665 |
| 1            | 2477.65   | 1677.6241666666665 |
| 1            | 2888.42   | 1677.6241666666665 |
| 1            | 3866.41   | 1677.6241666666665 |
+--------------+-----------+--------------------+
